--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,33 @@ body {
   transition: opacity 1s ease-in-out;
 }
 
+
+#clock{
+  font-size:4em;
+  font-weight: bold;
+  position: absolute;
+  top: 32%;
+  left: 30%;
+  color:#cacaca;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+#form{
+  position: absolute;
+  top: 48%;
+  left: 25%;
+}
+
+.bottom-box{
+  height: 180px;
+  width: 220px;
+  overflow: auto;
+  color: #cacaca;
+  list-style: none;
+  padding-left: 15px;
+}
+
 .scrollbar::-webkit-scrollbar-track
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(119, 119, 119, 0.3);
@@ -36,5 +63,5 @@ body {
 }
 
 .bg-primary-color{
-  background-color: #282a36;
+  background-color: #282a366e;
 }
